--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,68 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
 
-# dependencies
-/node_modules
+# C extensions
+*.so
 
-# testing
-/coverage
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# production
-/build
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.cache
+nosetests.xml
+coverage.xml
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+settings*.py
+*.sqlite
+/CACHE
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# IDE
+.idea/
+
+# External Libraries 
+wger/core/static/bower_components
+node_modules
+
+#Virtualenv folder
+venv-django/*
+
