--- a/package.json
+++ b/package.json
@@ -3,18 +3,59 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.2.0",
+    "@material-ui/icons": "^1.1.0",
+    "@material/menu": "^0.35.0",
     "axios": "^0.18.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
+    "bcrypt": "^2.0.1",
+    "body-parser": "^1.18.3",
+    "classnames": "^2.2.6",
+    "create-react-class": "^15.6.3",
+    "enzyme": "^3.3.0",
+    "global": "^4.3.2",
+    "gravatar-url": "^2.0.0",
+    "material-design-icons": "^3.0.1",
+    "material-ui": "^1.0.0-beta.47",
+    "material-ui-icons": "^1.0.0-beta.36",
+    "material-ui-responsive-menu": "^1.19.3",
+    "prop-types": "^15.6.1",
+    "react": "^16.4.0",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
+    "react-refresh-indicator": "^1.1.0",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
-    "redux": "^4.0.0"
+    "react-test-renderer": "^16.4.0",
+    "react-validation-framework": "^5.0.0",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-form": "^7.3.0",
+    "redux-form-material-ui": "^4.3.4",
+    "redux-logger": "^3.0.6",
+    "semantic-ui": "^2.3.1",
+    "semantic-ui-react": "^0.81.1",
+    "typeface-roboto": "0.0.54",
+    "validator": "^10.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src"
+  },
+  "devDependencies": {
+    "enzyme-adapter-react-16": "^1.1.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "remote-redux-devtools": "^0.5.12"
+  },
+  "node": {
+    "global": true
   }
 }
