--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.0",
+    "react-js-pagination": "^3.0.2",
+    "react-paginate": "^5.2.3",
     "react-redux": "^5.0.7",
     "react-refresh-indicator": "^1.1.0",
     "react-router-bootstrap": "^0.24.4",
