--- a/src/.babelrc
+++ b/src/.babelrc
@@ -1,3 +1,12 @@
-[
-    "presets": ["env"]
-]
+{
+    "env": {
+        "test": {
+            "presets": ["env", "react"],
+            "plugins": ["transform-export-extensions"],
+            "only": [
+                "./**/*.js",
+                "node_modules/jest-runtime"
+            ]
+        }
+    }
+}
