--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^1.2.0",
-    "@material-ui/icons": "^1.1.0",
-    "@material/menu": "^0.35.0",
     "axios": "^0.18.0",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.2.0",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
@@ -14,10 +14,9 @@
     "enzyme": "^3.3.0",
     "global": "^4.3.2",
     "gravatar-url": "^2.0.0",
+    "jest-cli": "^23.2.0",
     "material-design-icons": "^3.0.1",
-    "material-ui": "^1.0.0-beta.47",
-    "material-ui-icons": "^1.0.0-beta.36",
-    "material-ui-responsive-menu": "^1.19.3",
+    "normalizr": "^3.2.4",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
@@ -29,35 +28,56 @@
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
-    "react-test-renderer": "^16.4.0",
+    "react-test-renderer": "^16.4.1",
     "react-validation-framework": "^5.0.0",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.3.0",
     "redux-form-material-ui": "^4.3.4",
     "redux-logger": "^3.0.6",
+    "regenerator-runtime": "^0.12.0",
     "semantic-ui": "^2.3.1",
     "semantic-ui-react": "^0.81.1",
+    "shortid": "^2.2.8",
     "typeface-roboto": "0.0.54",
     "validator": "^10.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "jest",
     "eject": "react-scripts eject",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "precommit": "lint-staged",
+    "test:coverage": "jest --coverage --coverageRporters=text-lcov | coveralls"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "devDependencies": {
+    "chai": "^4.1.2",
     "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
+    "husky": "^0.14.3",
+    "jest": "^23.2.0",
+    "jsdom": "^11.11.0",
+    "lint-staged": "^7.2.0",
+    "mocha": "^5.2.0",
+    "prettier": "^1.13.5",
     "remote-redux-devtools": "^0.5.12"
   },
   "node": {
     "global": true
   }
+
 }
