configure heroku deployment

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "classnames": "^2.2.6",
     "create-react-class": "^15.6.3",
     "enzyme": "^3.3.0",
+    "eslint-plugin-flowtype": "^2.49.3",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.10.0",
     "global": "^4.3.2",
     "gravatar-url": "^2.0.0",
     "jest-cli": "^23.2.0",
