--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "prebuild": "npm run build:clean",
     "lint": "eslint src",
     "precommit": "lint-staged",
-    "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls"
+    "test:coverage": "jest --coverage --coverageReporters=text-lcov | coveralls"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
