--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "redux-form": "^7.3.0",
     "redux-form-material-ui": "^4.3.4",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "regenerator-runtime": "^0.12.0",
     "semantic-ui": "^2.3.1",
     "semantic-ui-react": "^0.81.1",
@@ -55,7 +56,6 @@
     "prebuild": "npm run build:clean",
     "lint": "eslint src",
     "precommit": "lint-staged"
-
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
