--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-add-module-exports": "^0.3.1",
     "chai": "^4.1.2",
     "coveralls": "^3.0.2",
     "enzyme-adapter-react-16": "^1.1.1",
