--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "material-design-icons": "^3.0.1",
     "normalizr": "^3.2.4",
     "prop-types": "^15.6.1",
-    "react": "^16.4.0",
+    "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.4.0",
+    "react-dom": "^16.4.1",
     "react-js-pagination": "^3.0.2",
     "react-paginate": "^5.2.3",
     "react-redux": "^5.0.7",
@@ -33,6 +33,7 @@
     "react-scripts": "1.1.4",
     "react-test-renderer": "^16.4.1",
     "react-validation-framework": "^5.0.0",
+    "reactstrap": "^6.2.0",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.3.0",
