--- a/package.json
+++ b/package.json
@@ -55,7 +55,19 @@
     "heroku-postbuild": "npm run build",
     "prebuild": "npm run build:clean",
     "lint": "eslint src",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "jest": {
+      "setupFiles": [
+        "./src/tests/jestsetup.js"
+      ],
+      "snapshotSerializers": [
+        "enzyme-to-json/serializer"
+      ],
+      "moduleNameMapper": {
+        "^.+\\.(css|scss)$": "identity-obj-proxy"
+      },
+      "collectCoverage": true
+    }
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
@@ -83,6 +95,7 @@
     "lint-staged": "^7.2.0",
     "mocha": "^5.2.0",
     "prettier": "^1.13.5",
+    "redux-mock-store": "^1.5.3",
     "remote-redux-devtools": "^0.5.12"
   },
   "node": {
