--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^23.1.4",
     "babel-plugin-add-module-exports": "^0.3.1",
     "chai": "^4.1.2",
     "coveralls": "^3.0.2",
@@ -90,6 +91,7 @@
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
     "husky": "^0.14.3",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^23.2.0",
     "jest-css-modules": "^1.1.0",
     "jsdom": "^11.11.0",
@@ -97,12 +99,22 @@
     "mocha": "^5.2.0",
     "prettier": "^1.13.5",
     "redux-mock-store": "^1.5.3",
-    "remote-redux-devtools": "^0.5.12"
+    "remote-redux-devtools": "^0.5.12",
+    "ts-jest": "^23.0.0"
   },
   "node": {
     "global": true
   },
   "jest": {
-    "scriptPreprocessor": "<rootDir>/node_modules/jest-css-modules"
+    "modulePaths": ["/shared/vendor/modules"],
+    "moduleFileExtensions": ["js", "jsx"],
+    "transformIgnorePatterns": [
+      "<rootDir>/node_modules"
+    ],
+    "moduleDirectories": ["node_modules", "bower_components", "shared"],
+
+    "moduleNameMapper": {
+      "\\.(css|scss)$": "identity-obj-proxy"
+    }
   }
 }
