handle response message

--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
   "jest": {
     "modulePaths": ["/shared/vendor/modules"],
     "moduleFileExtensions": ["js", "jsx"],
+    "collectCoverage": true,
     "transformIgnorePatterns": [
       "<rootDir>/node_modules"
     ],
