--- a/src/.babelrc
+++ b/src/.babelrc
@@ -1,20 +1,23 @@
 {
+    "plugins": ["syntax-dynamic-import", "transform-runtime"],
     "presets": [
-        ["env", {
-            "modules": false
-        }]
+        [
+            "es2015",
+            {
+                "modules": false
+            }
+        ],
+        "react",
+        "stage-0"
     ],
-
-    "plugins": ["syntax-dynamic-import"],
-
     "env": {
-        "test": {
-            "presets": ["env", "react"],
-            "plugins": ["transform-es2015-modules-commonjs"],
-            "only": [
-                "./**/*.js",
-                "node_modules/jest-runtime"
+        "start": {
+            "presets": [
+                "react-hmre"
             ]
+        },
+        "test": {
+            "presets": ["es2015", "react", "stage-0"]
         }
     }
 }
