--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ before_install:
   - npm install -g npm
 
 script:
-  - npm run test
+  - npm run test -- -u --coverage
+
+after_script:
+  - coveralls < coverarge/lcov.info
 
