[Chore-#158988628] add integration/e2e test for business form

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "prebuild": "npm run build:clean",
     "lint": "eslint src",
     "precommit": "lint-staged",
+    "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "lint-staged": {
